--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <img alt="logo" src="./img/logo.gif" class="logo"><div class="nama">NAUFAL ABDUL FATTAH</div>
 </header>
 <nav>
-<a href="resume.html" class="menu1">RESUME</a>
-<a href="bio.html" class="menu1">BIO</a>
+<a href="./portfolio/resume.html" class="menu1">RESUME</a>
+<a href="./portfolio/bio.html" class="menu1">BIO</a>
 </nav>
 <article>
 <h2>HAYOOO NGOPOOOOO........</H2>
