--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>NAF</title>
+<title>Naufal AF</title>
 <link rel="stylesheet" href="style/style.css" type="text/css" />
 <style>
 </style>
