--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>NAF</title>
+<title>RESUME</title>
 <link rel="stylesheet" href="style/resume.css" type="text/css" />
 <style>
 
